--- a/src/index.html
+++ b/src/index.html
@@ -102,17 +102,22 @@
       </div>
     </div>
 
-    <div class="content">
+    <div class="content option3">
       <div class="header">
         <div class="buySide">
           <div class="bondName">
             <h4>Guangzhou R&F Properties</h4>
-            <h1 class="ticker borderBottom">GZRFPR 5.875% 13/02/2023</h1>
+            <h1 class="ticker">GZRFPR 5.875% 13/02/2023 USD</h1>
           </div>
+          <div
+            class="borderBottom"
+            style="height: 8px; margin-left: 12px;"
+          ></div>
           <h2 class="additionalInfo right">China</h2>
           <h2 class="additionalInfo right">Financials</h2>
           <h2 class="additionalInfo right">BB-</h2>
-          <h2 class="additionalInfo right">USD</h2>
+          <!-- <h2 class="additionalInfo right">USD</h2> -->
+          <h2 class="additionalInfo right">2 years, 45 days</h2>
           <h2 class="additionalInfo right">XS1720054383</h2>
         </div>
         <div class="bookmark">
@@ -140,12 +145,17 @@
         <div class="sellSide">
           <div class="bondName">
             <h4>Zhenro Properties Group Limited</h4>
-            <h1 class="ticker borderBottom">ZHPRHK 9.150% 08/03/2022</h1>
+            <h1 class="ticker">ZHPRHK 9.150% 08/03/2022 USD</h1>
           </div>
+          <div
+            class="borderBottom"
+            style="height: 8px; margin-right: 12px"
+          ></div>
           <h2 class="additionalInfo left">China</h2>
           <h2 class="additionalInfo left">Financials</h2>
           <h2 class="additionalInfo left">B</h2>
-          <h2 class="additionalInfo left">USD</h2>
+          <!-- <h2 class="additionalInfo left">USD</h2> -->
+          <h2 class="additionalInfo left">3 years, 8 days</h2>
           <h2 class="additionalInfo left">XS1960071303</h2>
         </div>
       </div>
