--- a/src/index.html
+++ b/src/index.html
@@ -8,64 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <div class="userStory">
-      <h2>
-        I want to see more information about each bond when analysing a bond
-        pair.
-      </h2>
-      <p>
-        Users, when analysing a bonds pair, aren't able to see the relevant
-        attributes for each bond. This makes making comparisons more difficult.
-      </p>
-      <p><strong>Current details provided:</strong></p>
-      <img
-        src="./img/Screenshot 2020-02-06 at 10.25.38.png"
-        alt=""
-        style="margin-left: 280px"
-      />
-      <p>
-        <strong>Current bonds attributes visible:</strong>
-      </p>
-      <ol>
-        <li>ISIN <span class="positive">YES</span></li>
-        <li>Issuer name <span class="negative">NO</span></li>
-        <li>Ticker <span class="positive">YES</span></li>
-        <li>Country <span class="positive">YES</span></li>
-        <li>Risk <span class="positive">YES</span></li>
-        <li>Stock Group <span class="negative">NO</span></li>
-        <li>
-          Coupon rate <span class="positive">YES</span> (not shown in arguably
-          most common % format)
-        </li>
-        <li>Maturity date <span class="positive">YES</span></li>
-        <li>Type/Sector <span class="negative">NO</span></li>
-        <li>Residual duration <span class="negative">NO</span></li>
-        <li>Currency <span class="negative">NO</span></li>
-        <li>
-          Z-score <span class="negative">NO</span> (only calculable from graph)
-        </li>
-        <li>Similarity <span class="negative">NO</span></li>
-        <li>Reversion <span class="negative">NO</span></li>
-      </ol>
-    </div> -->
-
-    <div class="artboard">
-      <nav>
-        <ul>
-          <li>
-            <div class="icon"></div>
-            <label>Dashboard</label>
-          </li>
-          <li class="active">
-            <div class="icon"></div>
-            <label>Trade ideas</label>
-          </li>
-          <li>
-            <div class="icon"></div>
-            <label>Bookmarks</label>
-          </li>
-        </ul>
-      </nav>
+    <div class="artboard" id="pairDetails">
+      <nav></nav>
       <div class="view">
         <div class="header">
           <div class="buySide">
@@ -152,6 +96,13 @@
       </div>
     </div>
 
+    <div class="artboard" id="tradeIdeas">
+      <nav></nav>
+      <div class="view">
+        <h1>Trade ideas</h1>
+      </div>
+      <div class="sideBar"></div>
+    </div>
     <script src="./js/app.js"></script>
   </body>
 </html>
