Trade ideas added filtering draft

--- a/src/index.html
+++ b/src/index.html
@@ -100,8 +100,37 @@
       <nav></nav>
       <div class="view">
         <h1>Trade ideas</h1>
+        <div class="filtersArea">
+          <p class="">
+            Use filters to group trade ideas that align to your strategy for
+            easy tracking.
+          </p>
+          <h3 class="secondary" style="text-transform: uppercase;">
+            Saved filters
+          </h3>
+          <div class="filterGroup">
+            <div class="filtername">
+              <!-- <h2>Chinese financials</h2> -->
+              <div class="meta-data">
+                <div class="meta-tag">China</div>
+                <div class="meta-tag">Financials</div>
+                <div class="meta-tag">BB-</div>
+                <div class="meta-tag">3-5 years</div>
+              </div>
+              <div class="tradeIdeas_table"></div>
+            </div>
+          </div>
+          <div class="newFilter">+ New filter</div>
+        </div>
+
+        <div class="tradeIdeas_table"></div>
       </div>
-      <div class="sideBar"></div>
+      <div class="sidebar">
+        <div class="profileMenu">
+          <h3>Eve Moneypenny</h3>
+          <p class="secondary">DEMO</p>
+        </div>
+      </div>
     </div>
     <script src="./js/app.js"></script>
   </body>
