saved filter on ideas

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
       <div class="view">
         <h1>Trade ideas</h1>
         <div class="filtersArea">
-          <p class="">
+          <p class="d">
             Use filters to group trade ideas that align to your strategy for
             easy tracking.
           </p>
@@ -110,18 +110,22 @@
           </h3>
           <div class="filterGroup">
             <div class="filtername">
-              <!-- <h2>Chinese financials</h2> -->
               <div class="meta-data">
                 <div class="meta-tag">China</div>
                 <div class="meta-tag">Financials</div>
-                <div class="meta-tag">BB-</div>
+                <div class="meta-tag">> BB-</div>
                 <div class="meta-tag">3-5 years</div>
+                <div class="meta-tag">Industry must match</div>
               </div>
               <div class="tradeIdeas_table"></div>
             </div>
           </div>
           <div class="newFilter">+ New filter</div>
         </div>
+
+        <h3 class="secondary" style="text-transform: uppercase;">
+          All ideas
+        </h3>
 
         <div class="tradeIdeas_table"></div>
       </div>
