--- a/src/index.html
+++ b/src/index.html
@@ -8,108 +8,21 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="artboard" id="pairDetails">
-      <nav></nav>
-      <div class="view">
-        <div class="header">
-          <div class="buySide">
-            <div class="bondName">
-              <h3 class="preTitle">Guangzhou R&F Properties</h3>
-              <h1>GZRFPR <span class="noWrap">5 7/8</span> 13/02/2023</h1>
-              <h3>
-                XS1720054383 (USD)
-              </h3>
-            </div>
-            <div class="meta-data">
-              <div class="box">China</div>
-              <div class="box">Financials</div>
-              <div class="box highRisk">BB-</div>
-              <div class="box highRisk">3-5 years</div>
-            </div>
-          </div>
-          <div class="bookmark">
-            <div class="bookmarkInfo active">
-              <div class="icon">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                >
-                  <g fill="#F3AE4B">
-                    <path
-                      d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2z"
-                    ></path>
-                  </g>
-                </svg>
-              </div>
-              <h2>SH</h2>
-            </div>
-            <p>a day ago</p>
-          </div>
-          <div class="sellSide">
-            <div class="bondName">
-              <h3 class="preTitle">
-                Zhenro Properties Group Limited
-              </h3>
-              <h1 class="ticker">
-                ZHPRHK
-                <span class="noWrap">9 3/20</span> 08/03/2022
-              </h1>
-              <h3>
-                XS1960071303 (USD)
-              </h3>
-            </div>
-            <div class="" style="height: 8px; margin-right: 12px"></div>
-            <div class="meta-data">
-              <div class="box">China</div>
-              <div class="box">Financials</div>
-              <div class="box">B</div>
-              <div class="box">1-2 years</div>
-            </div>
-          </div>
-        </div>
-        <div id="compareStuff" class="compareStats">
-          <div>
-            <label for="">Z-Score</label>
-            <p>3.05</p>
-          </div>
-          <div>
-            <label for="">Similarity</label>
-            <p>0.89</p>
-          </div>
-          <div>
-            <label for="">Reversion</label>
-            <p>22bp</p>
-          </div>
-        </div>
-        <!-- End of header -->
-        <div class="graphs">
-          <img src="./img/graphs.png" alt="graphs" />
-        </div>
-      </div>
-      <div class="sidebar">
-        <div class="profileMenu">
-          <h3>Eve Moneypenny</h3>
-          <p class="secondary">DEMO</p>
-        </div>
-      </div>
-    </div>
-
     <div class="artboard" id="tradeIdeas">
       <nav></nav>
       <div class="view">
         <h1>Trade ideas</h1>
         <div class="filtersArea">
-          <p class="d">
-            Use filters to group trade ideas that align to your strategy for
-            easy tracking.
-          </p>
           <h3 class="secondary" style="text-transform: uppercase;">
             Saved filters
           </h3>
-          <div class="filterGroup">
-            <div class="filtername">
+          <p>
+            Use filters to group trade ideas that align to your strategy for
+            easy tracking.
+          </p>
+          <div class="filterCard_grid">
+            <div class="filterCard">
+              <h3>Filter name</h3>
               <div class="meta-data">
                 <div class="meta-tag">China</div>
                 <div class="meta-tag">Financials</div>
@@ -117,9 +30,14 @@
                 <div class="meta-tag">3-5 years</div>
                 <div class="meta-tag">Industry must match</div>
               </div>
-              <div class="tradeIdeas_table"></div>
+              <ol>
+                <li><strong>2</strong> new ideas</li>
+                <li><strong>12</strong> ideas in Katana Index</li>
+                <li><strong>124</strong> ideas total</li>
+              </ol>
             </div>
           </div>
+
           <div class="newFilter">+ New filter</div>
         </div>
 
