added font awesome and first filter cards UI

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,31 @@
           <h3 class="secondary" style="text-transform: uppercase;">
             Saved filters
           </h3>
-          <p>
+          <!-- <p>
             Use filters to group trade ideas that align to your strategy for
             easy tracking.
-          </p>
+          </p> -->
           <div class="filterCard_grid">
             <div class="filterCard">
-              <h3>Filter name</h3>
+              <!-- <h3>Filter name</h3> -->
+              <div class="meta-data">
+                <div class="meta-tag">India</div>
+                <div class="meta-tag">Energy</div>
+                <div class="meta-tag">> BB-</div>
+                <div class="meta-tag">6-10 years</div>
+                <div class="meta-tag">Industry must match</div>
+              </div>
+              <ol>
+                <li><strong>0</strong> new ideas</li>
+                <li><strong>8</strong> ideas in Katana Index</li>
+                <li><strong>43</strong> ideas total</li>
+              </ol>
+              <div class="table_footer">
+                <div class="button"><a href="#">View ideas &rarr;</a></div>
+              </div>
+            </div>
+            <div class="filterCard">
+              <!-- <h3>Filter name</h3> -->
               <div class="meta-data">
                 <div class="meta-tag">China</div>
                 <div class="meta-tag">Financials</div>
@@ -31,20 +49,19 @@
                 <div class="meta-tag">Industry must match</div>
               </div>
               <ol>
-                <li><strong>2</strong> new ideas</li>
+                <li class="shiny"><strong>2</strong> new ideas</li>
                 <li><strong>12</strong> ideas in Katana Index</li>
                 <li><strong>124</strong> ideas total</li>
               </ol>
+              <div class="table_footer">
+                <div class="button"><a href="#">View ideas &rarr;</a></div>
+              </div>
             </div>
           </div>
-
-          <div class="newFilter">+ New filter</div>
         </div>
-
         <h3 class="secondary" style="text-transform: uppercase;">
           All ideas
         </h3>
-
         <div class="tradeIdeas_table"></div>
       </div>
       <div class="sidebar">
