copy changes, additional securities and katana icon in table

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
       <nav></nav>
       <div class="view">
         <h1>Trade ideas</h1>
+        <ul class="ideasSummary secondary">
+          <li>2,876 bonds scanned</li>
+          <li>37,486 ideas</li>
+          <li>
+            45 ideas in Katana Index <span class="newHighlight">(17 new)</span>
+          </li>
+        </ul>
         <div class="filtersArea">
           <h3 class="secondary" style="text-transform: uppercase;">
             Saved filters
@@ -22,7 +29,8 @@
           </p> -->
           <div class="filterCard_grid">
             <div class="filterCard">
-              <!-- <h3>Filter name</h3> -->
+              <h3>Untitled filter</h3>
+
               <div class="meta-data">
                 <div class="meta-tag">India</div>
                 <div class="meta-tag">Energy</div>
@@ -31,16 +39,23 @@
                 <div class="meta-tag">Industry must match</div>
               </div>
               <ol>
-                <li><strong>0</strong> new ideas</li>
-                <li><strong>8</strong> ideas in Katana Index</li>
-                <li><strong>43</strong> ideas total</li>
+                <li><strong>43</strong> ideas</li>
+                <li>
+                  <strong>8</strong> ideas in Katana Index
+                  <span class="newHighlight">(2 new)</span>
+                </li>
               </ol>
+              <!-- <div class="newAlerts">
+                <p>·</p>
+                <img src="./img/katana_logo_inIndex.png" alt="" srcset="" />
+                <p>2 new ideas</p>
+              </div> -->
               <div class="table_footer">
                 <div class="button"><a href="#">View ideas &rarr;</a></div>
               </div>
             </div>
             <div class="filterCard">
-              <!-- <h3>Filter name</h3> -->
+              <h3>Untitled filter</h3>
               <div class="meta-data">
                 <div class="meta-tag">China</div>
                 <div class="meta-tag">Financials</div>
@@ -49,9 +64,8 @@
                 <div class="meta-tag">Industry must match</div>
               </div>
               <ol>
-                <li class="shiny"><strong>2</strong> new ideas</li>
-                <li><strong>12</strong> ideas in Katana Index</li>
-                <li><strong>124</strong> ideas total</li>
+                <li><strong>24</strong> ideas</li>
+                <li><strong>6</strong> ideas in Katana Index</li>
               </ol>
               <div class="table_footer">
                 <div class="button"><a href="#">View ideas &rarr;</a></div>
