WIP: Save button functionality

--- a/src/index.html
+++ b/src/index.html
@@ -14,53 +14,16 @@
         <h1>Trade ideas</h1>
         <div class="savedFilters">
           <h3 class="secondary" style="text-transform: uppercase;">
-            Saved filters <button class="Button Button--empty mini">Hide</button>
+            Saved filters <button class="Button Button--empty Button--mini">Hide</button>
           </h3>
-          <!-- <p class="secondary">
+
+          <p id="noSavedFilters" class="secondary">
             You currently have no saved filters. Filter the table below to find
             ideas that align to your stategy and save them for easier retrieval
             later.
-          </p> -->
-          <div class="filterCard_grid">
-            <div class="filterCard">
-              <h3>Untitled 13:21 21/02/2020</h3>
-
-              <div class="meta-data">
-                <div class="meta-tag">India</div>
-                <div class="meta-tag">Energy</div>
-                <div class="meta-tag">> BB-</div>
-                <div class="meta-tag">6-10 years</div>
-                <div class="meta-tag">Industry</div>
-              </div>
-              <ol>
-                <li><strong>43</strong> ideas</li>
-                <li>
-                  <strong>8</strong> ideas in Katana Index
-                  <span class="highlight new-ideas">2 new</span>
-                </li>
-              </ol>
-              <div class="table_footer">
-                <a class="linkButton" href="#">View ideas &rarr;</a>
-              </div>
-            </div>
-            <div class="filterCard">
-              <h3>Untitled 13:21 21/02/2020</h3>
-              <div class="meta-data">
-                <div class="meta-tag">China</div>
-                <div class="meta-tag">Financials</div>
-                <div class="meta-tag">> BB-</div>
-                <div class="meta-tag">3-5 years</div>
-                <div class="meta-tag">Industry</div>
-              </div>
-              <ol>
-                <li><strong>24</strong> ideas</li>
-                <li><strong>6</strong> ideas in Katana Index</li>
-              </ol>
-              <div class="table_footer">
-                <a class="linkButton" href="#">View ideas &rarr;</a>
-              </div>
-            </div>
-          </div>
+          </p>
+          
+          <div id="SavedFilterList" class="filterCard_grid"></div>
         </div>
         <h3 class="secondary" style="text-transform: uppercase;">
           All ideas
@@ -69,9 +32,9 @@
           <li><strong>Today:</strong></li>
           <li>37,486 ideas generated</li>
           <li>
-            <img class="katanaIndexIcon" src="./img/katana_logo_inIndex.png" />5 ideas in Katana
+            <img class="katanaIndexIcon" src="./img/katana_logo_inIndex.png" />15 ideas in Katana
             Index
-            <span class="newHighlight">(3 new added)</span>
+            <span class="highlight new-ideas">5 new</span>
           </li>
         </ul>
         <div class="filtersArea">
