WIP: Add clear and delete functionality

--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,11 @@
   
             </div>
           </form>
-          <button id="save-filter" class="Filters__action Button Button--small">Save Filter</button>
+
+          <div class="FilterActions">
+            <button id="saveFilter" class="Filters__action Button Button--small" disabled>Save Filter</button>
+            <button id="clearFilter" class="Filters__action Button Button--small" disabled>Clear Filter</button>
+          </div>
         </div>
 
         <div class="tradeIdeas_table"></div>
