--- a/src/index.html
+++ b/src/index.html
@@ -275,9 +275,17 @@
               </div> -->
             </div>
           </form>
-          <button id="save-filter" class="Filters__action Button Button--small">
-            Save Filter
-          </button>
+          <div>
+            <button class="flat">
+              Reset
+            </button>
+            <button
+              id="save-filter"
+              class="Filters__action Button Button--small"
+            >
+              Save Filter
+            </button>
+          </div>
         </div>
 
         <div class="tradeIdeas_table"></div>
@@ -292,62 +300,27 @@
     <div class="artboard" id="filterView">
       <nav id="main-nav"></nav>
       <div class="view">
-        <h1><span class="secondary">Filter</span> Untitled filter</h1>
-        <div class="savedFilters">
-          <h3 class="secondary" style="text-transform: uppercase;">
-            Saved filters
-            <button class="Button Button--empty mini">Hide</button>
-          </h3>
-          <!-- <p class="secondary">
-            You currently have no saved filters. Filter the table below to find
-            ideas that align to your stategy and save them for easier retrieval
-            later.
-          </p> -->
-          <div class="filterCard_grid">
-            <div class="filterCard">
-              <h3>Untitled 13:21 21/02/2020</h3>
-
-              <div class="meta-data">
-                <div class="meta-tag">India</div>
-                <div class="meta-tag">Energy</div>
-                <div class="meta-tag">> BB-</div>
-                <div class="meta-tag">6-10 years</div>
-                <div class="meta-tag">Industry</div>
-              </div>
-              <ol>
-                <li><strong>43</strong> ideas</li>
-                <li>
-                  <strong>8</strong> ideas in Katana Index
-                  <span class="highlight new-ideas">2 new</span>
-                </li>
-              </ol>
-              <div class="table_footer">
-                <a class="linkButton" href="#">View ideas &rarr;</a>
-              </div>
-            </div>
-            <div class="filterCard">
-              <h3>Untitled 13:21 21/02/2020</h3>
-              <div class="meta-data">
-                <div class="meta-tag">China</div>
-                <div class="meta-tag">Financials</div>
-                <div class="meta-tag">> BB-</div>
-                <div class="meta-tag">3-5 years</div>
-                <div class="meta-tag">Industry</div>
-              </div>
-              <ol>
-                <li><strong>24</strong> ideas</li>
-                <li><strong>6</strong> ideas in Katana Index</li>
-              </ol>
-              <div class="table_footer">
-                <a class="linkButton" href="#">View ideas &rarr;</a>
-              </div>
-            </div>
-          </div>
+        <div class="optionsBar">
+          <button class="mini">
+            <i class="fas fa-trash-alt"></i>
+          </button>
         </div>
-        <h3 class="secondary" style="text-transform: uppercase;">
-          All ideas
-        </h3>
-        <ul class="ideasSummary secondary">
+        <h1><span class="secondary">Filter</span> Untitled 13:21 21/02/2020</h1>
+        <div class="meta-data">
+          <div class="meta-tag">China</div>
+          <div class="meta-tag">Financials</div>
+          <div class="meta-tag">> BB-</div>
+          <div class="meta-tag">3-5 years</div>
+          <div class="meta-tag">Industry</div>
+        </div>
+        <ol>
+          <li><strong>43</strong> ideas</li>
+          <li>
+            <strong>8</strong> ideas in Katana Index
+            <span class="highlight new-ideas">2 new</span>
+          </li>
+        </ol>
+        <!-- <ul class="ideasSummary secondary">
           <li><strong>Today:</strong></li>
           <li>37,486 ideas generated</li>
           <li>
@@ -355,7 +328,7 @@
             ideas in Katana Index
             <span class="newHighlight">(3 new added)</span>
           </li>
-        </ul>
+        </ul> -->
         <div class="filtersArea">
           <form method="GET" action="/" class="FiltersForm">
             <div class="FilterRow">
@@ -557,7 +530,7 @@
             </div>
           </form>
           <button id="save-filter" class="Filters__action Button Button--small">
-            Save Filter
+            Update filter
           </button>
         </div>
 
