--- a/src/filter-view.html
+++ b/src/filter-view.html
@@ -5,40 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Ideas: Card Filters</title>
+    <title>Ideas: Card Filters > Filter View</title>
   </head>
   <body>
-    <div class="artboard" id="tradeIdeas">
+    <div class="artboard" id="filterView">
       <nav id="main-nav"></nav>
       <div class="view">
-        <h1>Trade ideas</h1>
-        <div class="savedFilters">
-          <h3 class="secondary" style="text-transform: uppercase;">
-            Saved filters <button id="toggleSaved" class="Button Button--empty Button--small Button--secondary">Hide</button>
-          </h3>
-
-          <div class="savedFilters__body">
-            <p id="noSavedFilters" class="secondary">
-              You currently have no saved filters. Filter the table below to find
-              ideas that align to your stategy and save them for easier retrieval
-              later.
-            </p>
-            
-            <div id="SavedFilterList" class="filterCard_grid"></div>
-          </div>
+        <div class="optionsBar">
+          <button id="deleteFilter" class="Button Button--empty Button--tertiary Button--link">
+            <i class="fas fa-trash-alt"></i>
+          </button>
         </div>
-        <h3 class="secondary" style="text-transform: uppercase;">
-          All ideas
-        </h3>
-        <ul class="ideasSummary secondary">
-          <li><strong>Today:</strong></li>
-          <li>37,486 ideas generated</li>
+        <h1><span id="filterName"></span></h1>
+        <div id="metaData" class="meta-data"></div>
+        <ol>
+          <li><strong id="numIdeas"></strong> ideas</li>
           <li>
-            <img class="katanaIndexIcon" src="./img/katana_logo_inIndex.png" />15 ideas in Katana
-            Index
-            <span class="highlight new-ideas">5 new</span>
+            <strong id="numIndexed"></strong> ideas in Katana Index
+            <span class="highlight new-ideas"><span id="numNew"></span> new</span>
           </li>
-        </ul>
+        </ol>
         <div class="filtersArea">
           <form method="GET" action="/" class="FiltersForm">
             <div class="FilterRow">
@@ -155,8 +141,7 @@
           </form>
 
           <div class="FilterActions">
-            <button id="clearFilter" class="Filters__action Button Button--small Button--secondary" disabled>Reset</button>
-            <button id="saveFilter" class="Filters__action Button Button--small" disabled>Save</button>
+            <button id="updateFilter" class="Filters__action Button Button--small" disabled>Update</button>
           </div>
         </div>
 
@@ -169,6 +154,6 @@
         </div>
       </div>
     </div>
-    <script src="./js/trade-ideas.bundle.js"></script>
+    <script src="./js/filter-view.bundle.js"></script>
   </body>
 </html>
