Add edit name functionality

--- a/src/filter-view.html
+++ b/src/filter-view.html
@@ -16,7 +16,7 @@
             <i class="fas fa-trash-alt"></i>
           </button>
         </div>
-        <h1><span id="filterName"></span></h1>
+        <h1><span class="filterName"></span></h1>
         <div id="metaData" class="meta-data"></div>
         <ol>
           <li><strong id="numIdeas"></strong> ideas</li>
