Added add ISIN field

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
               <span class="subtle-text">Trade Ideas:</span> Saved Filters
             </a>
           </li>
+          <li class="page-contents__item">
+            <a class="page-contents__link" href="/pages/monitor/">
+              <span class="subtle-text">Monitor:</span> New Section
+            </a>
+          </li>
         </ol>
       </div>
     </div>
