removed sidebar on big desktop and started table body

--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,18 @@
         <div class="monitor_table">
           <table>
             <thead>
-            <th scope="col"></th>
               <th scope="col">Bond</th>
               <th scope="col">Buy</th>
               <th scope="col">Sell</th>
             </thead>
+            <tr>
+              <td>Bond ticker goes here</td>
+              <td>3</td>
+              <td>0</td>
+              <td></td>
+            </tr>
             <tbody>
+            </tbody>
         </div>
       </div>
       <div class="sidebar">
