added add ISIN on button click functionality

--- a/src/index.html
+++ b/src/index.html
@@ -13,29 +13,17 @@
       <div class="view">
         <h1>Monitor</h1>
         <p class="secondary">
-          Add Bonds you are interested in monitoring and Katana will alert you when they appear in idea pairs, provide insights and and help you discover ideas with similar bonds.
+          Add Bonds you are interested in monitoring and Katana will alert you
+          when they appear in idea pairs, provide insights and and help you
+          discover ideas with similar bonds.
         </p>
         <form action="">
           <label for="isin">ISIN</label>
-          <input type="text" id="isin" /><button class="Button">Add</button>
+          <input type="text" id="isin" /><button class="Button" id="addISIN">
+            Add
+          </button>
         </form>
-
-        <div class="monitor_table">
-          <table>
-            <thead>
-              <th scope="col">Bond</th>
-              <th scope="col">Buy</th>
-              <th scope="col">Sell</th>
-            </thead>
-            <tr>
-              <td>Bond ticker goes here</td>
-              <td>3</td>
-              <td>0</td>
-              <td></td>
-            </tr>
-            <tbody>
-            </tbody>
-        </div>
+        <div class="monitor_table"></div>
       </div>
       <div class="sidebar">
         <div class="profileMenu">
