added monitor table empty state

--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,13 @@
       <nav id="main-nav"></nav>
       <div class="view">
         <h1>Monitor</h1>
-        <p class="secondary">
-          Add Bonds you are interested in monitoring and Katana will alert you
-          when they appear in idea pairs, provide insights and and help you
-          discover ideas with similar bonds.
-        </p>
-        <form action="">
+        <form>
           <label for="isin">ISIN</label>
-          <input type="text" id="isin" /><button class="Button" id="addISIN">
-            Add
-          </button>
+          <div>
+            <input type="text" id="isin" /><button class="Button" id="addISIN">
+              Add
+            </button>
+          </div>
         </form>
         <div class="monitor_table"></div>
       </div>
