Further language and styling modifications

--- a/src/pages/trade-ideas/filter-view.html
+++ b/src/pages/trade-ideas/filter-view.html
@@ -19,11 +19,11 @@
         <h1><span class="filterName"></span></h1>
         <div id="metaData" class="meta-data"></div>
         <ol>
-          <li><strong id="numIdeas"></strong> ideas</li>
           <li>
-            <strong id="numIndexed"></strong> ideas in Katana Index
+            <strong id="numIndexed"></strong> opportunities
             <span class="highlight new-ideas"><span id="numNew"></span> new</span>
           </li>
+          <li><strong id="numIdeas"></strong> ideas</li>
         </ol>
         <div class="filtersArea">
           <form method="GET" action="/" class="FiltersForm">
