--- a/src/pages/trade-ideas/index.html
+++ b/src/pages/trade-ideas/index.html
@@ -32,12 +32,11 @@
         </h3>
         <ul class="ideasSummary secondary">
           <li><strong>Today:</strong></li>
-          <li>37,486 ideas generated</li>
           <li>
-            <img class="center-vertically" src="/img/katana_logo_inIndex.png" />15 ideas in Katana
-            Index
+            <img class="center-vertically" src="/img/katana_logo_inIndex.png" />15 opportunities
             <span class="highlight new-ideas">5 new</span>
           </li>
+          <li>37,486 ideas</li>
         </ul>
         <div class="filtersArea">
           <form method="GET" action="/" class="FiltersForm">
