--- a/src/pages/trade-ideas/index.html
+++ b/src/pages/trade-ideas/index.html
@@ -36,7 +36,8 @@
             <img class="center-vertically" src="/img/katana_logo_inIndex.png" />15 opportunities
             <span class="highlight new-ideas">5 new</span>
           </li>
-          <li>37,486 ideas</li>
+          <li>37,471 alternatives</li>
+          <li>37,486 total relevant pairs</li>
         </ul>
         <div class="filtersArea">
           <form method="GET" action="/" class="FiltersForm">
