--- a/src/pages/trade-ideas/filter-view.html
+++ b/src/pages/trade-ideas/filter-view.html
@@ -26,120 +26,7 @@
           <li><strong id="numIdeas"></strong> ideas</li>
         </ol>
         <div class="filtersArea">
-          <form method="GET" action="/" class="FiltersForm">
-            <div class="FilterRow">
-          
-              <div class="Filters">
-                <div class="Filter">
-                  <input hidden type="checkbox" class="Filter__checkbox" />
-                  <label for="type" class="Filter__label">Type</label>
-                  <div class="dropdown-content FilterGroup">
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="type" value="Senior" />
-                      <span class="label">Senior</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="type" value="Subordinated" />
-                      <span class="label">Subordinated</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                  </div>
-                </div>
-                <div class="Filter">
-                  <input hidden type="checkbox" class="Filter__checkbox" />
-                  <label for="country_of_risk" class="Filter__label">Country</label>
-                  <div class="dropdown-content FilterGroup">
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="country_of_risk" value="China" />
-                      <span class="label">China</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="country_of_risk" value="USA" />
-                      <span class="label">USA</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="country_of_risk" value="Germany" />
-                      <span class="label">Germany</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                  </div>
-                </div>
-                <div class="Filter">
-                  <input hidden type="checkbox" class="Filter__checkbox" />
-                  <label for="industry_group" class="Filter__label">Industry</label>
-                  <div class="dropdown-content FilterGroup">
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="industry_group" value="Consumer Goods" />
-                      <span class="label">Consumer Goods</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="industry_group" value="Financials" />
-                      <span class="label">Financials</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="industry_group" value="Healthcare" />
-                      <span class="label">Healthcare</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                  </div>
-                </div>
-                <div class="Filter">
-                  <input hidden type="checkbox" class="Filter__checkbox" />
-                  <label for="bb_composite" class="Filter__label">Rating</label>
-                  <div class="dropdown-content FilterGroup">
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="bb_composite" value="A" />
-                      <span class="label">A</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="bb_composite" value="BBB" />
-                      <span class="label">BBB</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="bb_composite" value="BB" />
-                      <span class="label">BB</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="bb_composite" value="B" />
-                      <span class="label">B</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                  </div>
-                </div>
-                <div class="Filter">
-                  <input hidden type="checkbox" class="Filter__checkbox" />
-                  <label for="maturity" class="Filter__label">Maturity</label>
-                  <div class="dropdown-content FilterGroup">
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="maturity" value="1 - 2 years" />
-                      <span class="label">1 - 2 years</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="maturity" value="3 - 5 years" />
-                      <span class="label">3 - 5 years</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                    <label class="group-label FilterGroup__label">
-                      <input hidden type="checkbox" name="maturity" value="6 - 10 years" />
-                      <span class="label">6 - 10 years</span>
-                      <span class="FilterGroup__count">(0)</span>
-                    </label>
-                  </div>
-                </div>
-              </div>
-              
-            </div>
-          </form>
-
+          <form id="filterForm" method="GET" action="/" class="FiltersForm"></form>
           <div class="FilterActions">
             <button id="updateFilter" class="Filters__action Button Button--small" disabled>Update</button>
           </div>
