--- a/src/pages/trade-ideas/filter-view.html
+++ b/src/pages/trade-ideas/filter-view.html
@@ -23,7 +23,7 @@
             <strong id="numIndexed"></strong> opportunities
             <span class="highlight new-ideas"><span id="numNew"></span> new</span>
           </li>
-          <li><strong id="numIdeas"></strong> ideas</li>
+          <li><strong id="numIdeas"></strong> alternatives</li>
         </ol>
         <div class="filtersArea">
           <form id="filterForm" method="GET" action="/" class="FiltersForm"></form>
