--- a/src/pages/monitor/index.html
+++ b/src/pages/monitor/index.html
@@ -12,24 +12,15 @@
       <nav id="main-nav"></nav>
       <div class="view">
         <h1>Monitor</h1>
-        <p class="secondary">
-          Add Bonds you are interested in monitoring and Katana will alert you when they appear in idea pairs, provide insights and and help you discover ideas with similar bonds.
-        </p>
-        <form action="">
+        <form>
           <label for="isin">ISIN</label>
-          <input type="text" id="isin" /><button class="Button">Add</button>
+          <div>
+            <input type="text" id="isin" /><button class="Button" id="addISIN">
+              Add
+            </button>
+          </div>
         </form>
-
-        <div class="monitor_table">
-          <table>
-            <thead>
-            <th scope="col"></th>
-              <th scope="col">Bond</th>
-              <th scope="col">Buy</th>
-              <th scope="col">Sell</th>
-            </thead>
-            <tbody>
-        </div>
+        <div class="monitor_table"></div>
       </div>
       <div class="sidebar">
         <div class="profileMenu">
@@ -38,5 +29,6 @@
         </div>
       </div>
     </div>
+    <script src="/js/monitor.bundle.js"></script>
   </body>
 </html>
