--- a/src/pages/monitor/index.html
+++ b/src/pages/monitor/index.html
@@ -15,7 +15,8 @@
         <form>
           <label for="isin">ISIN</label>
           <div>
-            <input type="text" id="isin" /><button class="Button" id="addISIN">
+            <input type="text" id="isin" />
+            <button class="Button" id="addISIN">
               Add
             </button>
           </div>
