--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
         <ol class="page-contents__list">
           <li class="page-contents__item">
             <a class="page-contents__link" href="/pages/trade-ideas/">
-              <span class="subtle-text">Trade Ideas:</span> Saved Filters
+              <span class="secondary">Trade Ideas:</span> Saved Filters
             </a>
           </li>
           <li class="page-contents__item">
             <a class="page-contents__link" href="/pages/monitor/">
-              <span class="subtle-text">Monitor:</span> New Section
+              <span class="secondary">Monitor:</span> New Section
             </a>
           </li>
         </ol>
