--- a/src/pages/monitor/index.html
+++ b/src/pages/monitor/index.html
@@ -16,9 +16,7 @@
           <label for="isin">ISIN</label>
           <div>
             <input type="text" id="isin" />
-            <button class="Button" id="addISIN">
-              Add
-            </button>
+            <button class="Button" id="addISIN">Add</button>
           </div>
         </form>
         <div class="monitor_table"></div>
