Add similarity page

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
             </a>
           </li>
           <li class="page-contents__item">
+            <a class="page-contents__link" href="/pages/similarity/">
+              <span class="secondary">Trade Ideas:</span> Similarity
+            </a>
+          </li>
+          <li class="page-contents__item">
             <a class="page-contents__link" href="/pages/monitor/">
               <span class="secondary">Monitor:</span> New Section
             </a>
